Fix overflows on pay page for mobile
Also optimize the copy address field qr code positioning

--- a/src/css/structure.scss
+++ b/src/css/structure.scss
@@ -72,8 +72,6 @@ html {
 }
 
 .deposit-start, .invoice, .pay, .prove, .congratulations, .redemption-start, .confirming {
-    display: flex;
-    flex-direction: column;
     font-family: 'apercu-mono-regular-pro';
     text-align: center;
     min-height: 675px;
